Fixing the background-image for user-friendly-interface on mobile

--- a/scss/_logo.scss
+++ b/scss/_logo.scss
@@ -11,6 +11,8 @@
   .app-store_logo {
     width:145.69px;
     height: 44px;
+    margin-block-start: 2rem;
+    margin-block-end: 2rem;
     padding-inline-start: $padding / 2;
     padding-inline-end: $padding / 2;
   }
